--- a/flutter_native_splash.yaml
+++ b/flutter_native_splash.yaml
@@ -1,5 +1,5 @@
 flutter_native_splash:
-  background_image: "assets/images/muslimSplash.png"
+  background_image: "assets/images/downlaod.png"
   android: true
   ios: true
   fullscreen: true
