--- a/flutter_native_splash.yaml
+++ b/flutter_native_splash.yaml
@@ -1,5 +1,6 @@
 flutter_native_splash:
-  background_image: "assets/images/downlaod.png"
+  background_image: "assets/images/muslimSplash.jpeg"
   android: true
   ios: true
   fullscreen: true
+  #dart run flutter_native_splash:create
